Fix light theme combo box error not showing

--- a/resources/application/styling/light/app.css
+++ b/resources/application/styling/light/app.css
@@ -27,7 +27,7 @@ body
 }
 
 /* UI Errors */
-.text-input.error {
+.text-input.error, .combo-box.error .text-field {
     -fx-focus-color: #d35244;
     -fx-faint-focus-color: #d3524422;
 
